Basic route to add/update/create/delete Product (#2)
* Basic route to add/update/create/delete Product

* Update case name
